--- a/content/home/.config/gtk-3.0/settings.ini
+++ b/content/home/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Darker
 gtk-icon-theme-name=Arc
-gtk-font-name=DejaVu Sans 10
+gtk-font-name=Fira Sans Book 10
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
