--- a/content/home/.config/i3/config
+++ b/content/home/.config/i3/config
@@ -6,8 +6,8 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 8
-font pango:DejaVu Sans Mono 8
+# font pango:monospace 8
+font pango:Fira Mono 9
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -19,18 +19,14 @@ font pango:DejaVu Sans Mono 8
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
-# start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
-
 # kill focused window
 bindsym $mod+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# appplication shortcuts
+bindsym $mod+d exec rofi -show run
+bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+t exec nemo
+bindsym $mod+backslash exec qutebrowser
 
 # change focus
 bindsym $mod+h focus left
@@ -78,6 +74,10 @@ bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
+
+# workspace "back and forth" e.g. alt-tab style behavior
+workspace_auto_back_and_forth yes
+bindsym $mod+tab workspace back_and_forth
 
 # focus the child container
 #bindsym $mod+d focus child
@@ -134,10 +134,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -156,9 +156,36 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+        position top
         status_command i3status
 }
 
 # gaps
 gaps inner 10
 smart_gaps on
+
+# disable titlebars
+for_window [class="^.*"] border pixel 3
+
+# restore color scheme
+# exec_always --no-startup-id wal -i ~/pictures/wallpapers/scenic.jpg -a 90
+
+# set  background image
+exec_always --no-startup-id feh --bg-fill ~/wallpapers/background.jpg
+
+# start compositor for sweet transparency 
+exec --no-startup-id compton
+
+# colors GLHF
+set $highlight #009999
+set $dim #003333
+set $alert #330000
+set $unused  #990000
+
+# class                 border  backgr. text    indicator child_border
+client.focused          $unused $unused $unused $unused   $highlight
+client.focused_inactive $unused $unused $unused $unused   $highlight
+client.unfocused        $unused $unused $unused $unused   $dim
+client.urgent           $unused $unused $unused $unused   $alert
+client.placeholder      $unused $unused $unused $unused   $unused
+client.background       $unused
