--- a/content/home/.config/i3/config
+++ b/content/home/.config/i3/config
@@ -7,7 +7,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 # font pango:monospace 8
-font pango:Fira Mono 9
+font pango:mononoki 11
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
