--- a/content/home/.config/i3/config
+++ b/content/home/.config/i3/config
@@ -161,8 +161,12 @@ bar {
 }
 
 # gaps
-gaps inner 10
-smart_gaps on
+# Note that outer gaps are an addition to inner gaps
+gaps inner 30 
+gaps outer 20
+bindsym $mod+Shift+o  gaps outer current set 0; gaps inner current set 0
+bindsym $mod+Shift+i  gaps outer current set 20; gaps inner current set 30
+# smart_gaps p
 
 # disable titlebars
 for_window [class="^.*"] border pixel 2
