--- a/content/home/.config/i3/config
+++ b/content/home/.config/i3/config
@@ -26,7 +26,7 @@ bindsym $mod+q kill
 bindsym $mod+d exec rofi -show run
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+t exec nemo
-bindsym $mod+backslash exec firefox
+bindsym $mod+backslash exec chromium
 
 # change focus
 bindsym $mod+h focus left
@@ -155,15 +155,15 @@ bindsym $mod+r mode "resize"
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-        position top
-        status_command i3status
-}
+# bar {
+#        position top
+#        status_command i3status
+#}
 
 # gaps
 # Note that outer gaps are an addition to inner gaps
 gaps inner 30 
-gaps outer 20
+# gaps outer 20
 bindsym $mod+Shift+o  gaps outer current set 0; gaps inner current set 0
 bindsym $mod+Shift+i  gaps outer current set 20; gaps inner current set 30
 # smart_gaps p
@@ -172,19 +172,16 @@ bindsym $mod+Shift+i  gaps outer current set 20; gaps inner current set 30
 for_window [class="^.*"] border pixel 2
 smart_borders on
 
-# restore color scheme
-# exec_always --no-startup-id wal -i ~/pictures/wallpapers/scenic.jpg -a 90
-
-# set  background image
-# exec_always --no-startup-id feh --bg-fill ~/wallpapers/background.jpg
-
 # start compositor for sweet transparency 
-exec --no-startup-id compton
+exec --no-startup-id compton --config ~/.config/compton/compton.conf
 
-set_from_resource $normal_bg i3wm.color0
-set_from_resource $normal_fg i3wm.color8
-set_from_resource $focus_bg i3wm.color1
-set_from_resource $focus_fg i3wm.color0
+# start bar
+exec_always --no-startup-id ~/.config/polybar/launch.sh
+
+set_from_resource $normal_bg i3wm.color0 #FFFFFF
+set_from_resource $normal_fg i3wm.color8 #FFFFFF
+set_from_resource $focus_bg i3wm.color1 #FFFFFF
+set_from_resource $focus_fg i3wm.color0 #FFFFFF
 
 # class                 border  backgr. text    indicator child_border
 client.focused          $focus_bg  $focus_bg  $focus_fg  $focus_bg  $focus_bg
