--- a/content/home/.config/compton/compton.conf
+++ b/content/home/.config/compton/compton.conf
@@ -108,6 +108,7 @@ shadow-ignore-shaped = false;
 
 menu-opacity = 1;
 inactive-opacity = 1;
+inactive-dim = 0.3;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
