--- a/content/home/.config/i3/config
+++ b/content/home/.config/i3/config
@@ -164,8 +164,11 @@ bindsym $mod+r mode "resize"
 # Note that outer gaps are an addition to inner gaps
 gaps inner 30 
 # gaps outer 20
-bindsym $mod+Shift+o  gaps outer current set 0; gaps inner current set 0
-bindsym $mod+Shift+i  gaps outer current set 20; gaps inner current set 30
+bindsym $mod+Shift+i  gaps outer current set 0; gaps inner current set 0
+bindsym $mod+Shift+o  gaps outer current set 0; gaps inner current set 30
+bindsym $mod+Shift+bracketleft gaps inner current minus 5
+bindsym $mod+Shift+p gaps outer current plus 5
+bindsym $mod+Shift+bracketright gaps inner current plus 5
 # smart_gaps p
 
 # disable titlebars
