--- a/content/home/.config/polybar/config
+++ b/content/home/.config/polybar/config
@@ -75,6 +75,7 @@ ws-icon-0 = "1; "
 ws-icon-1 = "2; "
 ws-icon-2 = "3; "
 ws-icon-3 = "4; "
+ws-icon-4 = "5; "
 ;ws-icon-default = " "
 
 ; Only show workspaces on the same output as the bar
