--- a/content/home/.config/compton/compton.conf
+++ b/content/home/.config/compton/compton.conf
@@ -108,7 +108,7 @@ shadow-ignore-shaped = false;
 
 menu-opacity = 1;
 inactive-opacity = 1;
-inactive-dim = 0.3;
+inactive-dim = 0.125;
 active-opacity = 1;
 frame-opacity = 1;
 inactive-opacity-override = false;
@@ -123,9 +123,9 @@ opacity-rule = [
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
-# blur-background-frame = true;
+blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
 blur-background-fixed = false;
 blur-background-exclude = [
