--- a/content/home/.config/compton/compton.conf
+++ b/content/home/.config/compton/compton.conf
@@ -70,6 +70,8 @@ shadow-offset-y = -15;
 # The translucency for shadows. (default .75)
 shadow-opacity = 0.75;
 
+clear-shadow = true;
+
 # Set if you want different colour shadows
 # shadow-red = 0.0;
 # shadow-green = 0.0;
@@ -124,6 +126,8 @@ opacity-rule = [
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
 blur-background = true;
+blur-method = "kawase";
+blur-strength = 5;
 # Blur background of opaque windows with transparent frames as well.
 blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
